// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <thead>
          <th>
            Date
          </th>
          <th>
            Time
          </th>
          <th>
            Provider Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Scheduler
          </th>
          <th>
            Actions
          </th>
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`With Just Future Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <thead>
          <th>
            Date
          </th>
          <th>
            Time
          </th>
          <th>
            Provider Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Scheduler
          </th>
          <th>
            Actions
          </th>
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`With No Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <div
        className="page-instructions"
      >
        <p>
          Patient has no appointment history
        </p>
      </div>
      <table
        className="appt-tables header-table"
      >
        <thead>
          <th>
            Date
          </th>
          <th>
            Time
          </th>
          <th>
            Provider Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Scheduler
          </th>
          <th>
            Actions
          </th>
        </thead>
      </table>
    </div>
  </div>
</div>
`;

exports[`With only Past Appointments 1`] = `
<div
  className="patient-appointments-wrapper"
>
  <div
    className="tab-content clearfix"
  >
    <div
      className="patient-appointments-form tab-pane active"
    >
      <table
        className="appt-tables header-table"
      >
        <thead>
          <th>
            Date
          </th>
          <th>
            Time
          </th>
          <th>
            Provider Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Scheduler
          </th>
          <th>
            Actions
          </th>
        </thead>
      </table>
    </div>
  </div>
</div>
`;
